Fix layout on firefox permission confirmation

--- a/src/options.css
+++ b/src/options.css
@@ -153,6 +153,10 @@ form > div {
   padding: 10px 10px 50px 10px;
 }
 
+#askPermission {
+  padding: 10px;
+}
+
 #configStatus {
   position: fixed;
   bottom: 0;
